Fixed flickering scrollbar

--- a/static/less/modals.less
+++ b/static/less/modals.less
@@ -1,3 +1,8 @@
+
+.modal {
+  overflow-y: auto;
+}
+
 .modal-body hr {
   margin: 10px 0px;
   border-color: #CCC;
